--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,3 +3,7 @@ djangorestframework==3.16.1
 python-dotenv==1.2.1
 psycopg[binary]==3.3.2
 drf-spectacular==0.29.0
+django-cors-headers==4.9.0
+dj-rest-auth==7.0.1
+django-allauth==64.0.0
+requests==2.32.5
