--- a/frontend/project-moduway/package.json
+++ b/frontend/project-moduway/package.json
@@ -14,8 +14,10 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "vue": "^3.5.25",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "vue3-google-login": "^2.0.34"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
