chore(deps): kiwi, sk-learn, pandas, joblib 추가

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,3 +12,9 @@ PyJWT
 cryptography
 pgvector==0.4.2
 elasticsearch==9.2.0
+
+# 비교함
+kiwipiepy==0.22.2
+scikit-learn==1.8.0
+pandas==2.2.0 # numpy 버전과 호환 고려.
+joblib==1.5.3
